--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sequelize": "^6.7.0",
+    "sequelize-cli": "^6.3.0",
     "sequelize-typescript": "^2.1.1"
   },
   "devDependencies": {
