--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs": "^0.0.1-security",
     "mysql2": "^2.3.1",
     "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -46,6 +47,7 @@
     "sequelize-typescript": "^2.1.1"
   },
   "devDependencies": {
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/schematics": "^8.0.0",
