--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.1.1",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/sequelize": "^8.0.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fs": "^0.0.1-security",
+    "googleapis": "^91.0.0",
     "mysql2": "^2.3.1",
     "nanoid": "^3.1.30",
     "nodemailer": "^6.7.1",
@@ -55,6 +57,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
