--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.1",
     "fs": "^0.0.1-security",
     "googleapis": "^91.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.1",
     "nanoid": "^3.1.30",
     "nodemailer": "^6.7.1",
@@ -56,6 +57,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-local": "^1.0.34",
