--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ DB_PASS=strong_pass
 DB_DIALECT=mysql
 DB_NAME=ClassManagement
 PORT=3000
+SECRET_KEY=strong_secret_key
+JWT_AGE=2d
+GG_CLIENT_ID=abc123.apps.googleusercontent.com
+GG_CLIENT_SECRET=GOCOO...
+GG_REFRESH_TOKEN=refresh_token
+GG_EMAIL=abc@gmail.com
+GG_REDIRECT=https://developers.google.com/oauthplayground
+CLIENT_URL=http://localhost:3000
